<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChallengeFunctions</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Select Task.  Output visible in LogCat</string>
<string name="button">GRAB CHALLENGES</string>
<string name="btnCheck">GRAB USERS</string>
<string name="btnChallenge">CHALLENGE USER TEST</string>
<string name="btnReceived">CHECK IF CHALLENGE</string>
<string name="btnComplete">COMPLETE CHALLENGE</string>
</resources>
