<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:text="@string/button" 
        
        
        />
        <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCheck" 
        android:layout_below="@id/button"      
        
        />
        
        
        <Button
            android:id="@+id/buttonChallenge"
                    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChallenge" 
        android:layout_below="@id/buttonCheck"  />
        
                <Button
            android:id="@+id/buttonReceived"
                    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReceived" 
        android:layout_below="@id/buttonChallenge"  />
                                <Button
            android:id="@+id/buttonComplete"
                    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnComplete" 
        android:layout_below="@id/buttonReceived"  />

</RelativeLayout>
